[package]
name = "dsrs"
version = "0.1.0"
authors = ["Vladimir Feinberg <vladimir.feinberg@gmail.com>"]
edition = "2018"
description = "Rusty wrapper for Apache DataSketches"
homepage = "https://github.com/vlad17/datasketches-rs"
repository = "https://github.com/vlad17/datasketches-rs"
readme = "README.md"
keywords = ["sketch", "probabilistic"]
categories = ["command-line-utilities", "algorithms", "compression"]
license = "Apache-2.0"

[dependencies]
cxx = "1.0"
structopt = "0.3"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
byte-slice-cast = "1.0"
criterion = "0.3"
